# liang_ba

./: .coverage  .dockerignore  .env.prod.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  JWT_AUTH_README.md  Makefile  README.en.md  README.md  admin.py  asgi.py  base_settings.py  check_unused_tables.py  conftest.py  docker-compose.prod.yml  docker-compose.yml  init-ssl.sh  liangba.ini  local_settings.py  main.py  manage.py  manage_prod.py  mypy.ini  mysql_to_pg.py  production_settings.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  ruff.toml  wsgi.py
.claude/: settings.local.json
.github/: CI_CD_SETUP.md  CODEOWNERS
admin/: .env  .eslintrc.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/: urls.py  view.py
company/: .gitignore  databases.json  manage.py  requirements.txt
image/: src=http___5b0988e595225.cdn.sohucs.com_images_20171231_c8ff596325fc4c738450c1708bd813b4.jpeg&refer=http___5b0988e595225.cdn.sohucs.jfif  src=http___5b0988e595225.cdn.sohucs.com_images_20180201_fd4955c5bf504257bc610c037a4fe7ce.jpeg&refer=http___5b0988e595225.cdn.sohucs.jfif  src=http___5b0988e595225.cdn.sohucs.com_images_20200427_7164f3d31f374a239f2fccae487589b2.jpeg&refer=http___5b0988e595225.cdn.sohucs.jfif  src=http___5b0988e595225.cdn.sohucs.com_q_70,c_zoom,w_640_images_20180730_504d048e12d940a9a3ba7d0bff479a61.jpeg&refer=http___5b0988e595225.cdn.sohucs.jfif  src=http___bpic.588ku.com_back_pic_05_85_63_405c7dd4ae234da.jpg&refer=http___bpic.588ku.jfif  src=http___dingyue.nosdn.127.net_jV7OLACfWrcl0aDn8k5LPWTx8JfNn39Zdl237bsJVoWPl1531206324382transferflag.png&refer=http___dingyue.nosdn.127.jfif  src=http___gss0.baidu.com_-Po3dSag_xI4khGko9WTAnF6hhy_zhidao_pic_item_7a899e510fb30f2471a07fe8c695d143ad4b0326.jpg&refer=http___gss0.baidu.jfif  src=http___hbimg.b0.upaiyun.com_39ccfc9db9d21ea572830becb61cd4cefc926ef1c5a2-Aca4ti_fw658&refer=http___hbimg.b0.upaiyun.jfif  src=http___image.gfedu.cn_images_1470712426547034501.jpg&refer=http___image.gfedu.jfif  src=http___img.article.pchome.net_00_24_45_37_pic_lib_s960x639_BankNote_1002s960x639.jpg&refer=http___img.article.pchome.jfif  src=http___img.book118.com_sr1_M00_23_0E_wKh2AluiSIKIXsbQAAnN2mgJhrgAANwxAB3AasACc3y419.jpg&refer=http___img.book118.jfif  src=http___img.cebnet.com.cn_20170209_102363148.jpg&refer=http___img.cebnet.com.jfif  src=http___img.jinse.com_5375222_image3.png&refer=http___img.jinse.jfif  (+36 more)
(+588 files in other folders)
